# sc-archive

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  requirements.txt  setup.cfg  setup.py  update-req.sh
.github/workflows/: release.yaml
sc_archive/: archive.py  config.py  default.ini  example.ini  rabbit.py  sql.py  watcher_webhook.py
