[metadata]
name = sc-archive
version = 1.0.2
author = 7x11x13
author_email = x7x11x13@gmail.com
description = SoundCloud archiving utility
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/7x11x13/sc-archive
project_urls =
    Bug Tracker = https://github.com/7x11x13/sc-archive/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    appdirs
    pika
    psycopg2
    requests
    soundcloud-v2
    sqlalchemy

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    sc-archive-run = sc_archive.archive:run
    sc-archive-run-watcher = sc_archive.watcher_webhook:run
    sc-archive-set-auth = sc_archive.archive:set_auth
    sc-archive-set-client-id = sc_archive.archive:set_client_id